add usernames on reservations admin page
